--- a/src/App.scss
+++ b/src/App.scss
@@ -107,6 +107,12 @@
     justify-content: space-between;
     padding: 0 7rem;
     margin-top: 7rem;
+    @media (max-width:1024px){
+        padding: 0 4em;
+    }
+    @media (max-width:768px){
+        padding: 0 4em;
+    }
     @media (max-width: 500px){
         padding: 0 1rem;
         margin-top: 1rem;
@@ -148,6 +154,11 @@
                 font-weight: 400;
                 font-size: 1.25rem;
                 border-radius: 1.313rem;
+                @media (max-width:1024px){
+                    width: 12.875rem;
+                    height: 3.813rem;
+                    font-size: 0.8rem;
+                }
                 @media (max-width: 768px){
                     white-space: nowrap;
                     max-width: 15rem;
@@ -158,28 +169,17 @@
                     display: none;
                 }
             }
-            &__btn2{
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                color: white;
-                background: #18947F;
-                display: none;
-                white-space: nowrap;
-                max-width: 5.125rem;
-                height: 1.5rem;
-                font-size: 0.313rem;
-                visibility: hidden;
-                @media (max-width: 500px){
-                    visibility: visible;
-                }
-            }
             p{
                 font-weight: 400;
                 font-size: 1rem;
                 line-height: 1.75rem;
                 max-width: 28rem;
                 color: #808080;
+                @media (max-width:1024px){
+                    font-size: 0.8rem;
+                    line-height: 1.4rem;
+                    max-width: 25rem;
+                }
                 @media (max-width: 768px){
                     font-size: 0.7rem;
                     max-width: 20rem;
@@ -192,17 +192,39 @@
                 }
             }
         }
+        &__btn2{
+            display: none;
+        }
+        @media (max-width:500px){
+            &__btn2{
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                color: white;
+                background: #18947F;
+                display: none;
+                white-space: nowrap;
+                max-width: 5.125rem;
+                height: 1.5rem;
+                font-size: 0.313rem;
+            }
+        }
     }
+    
     img{
-        max-width: 26.063rem;
+        width: 26.063rem;
         height: 26.063rem;
+        @media (max-width:1024px){
+            width: 20.063rem;
+            height: 20.063rem;
+        }
         @media (max-width: 768px){
             padding: 0;
-            max-width: 16rem;
+            width: 16rem;
             height: 15rem;
         }
         @media (max-width: 500px){
-            max-width: 7.25rem;
+            width: 7.25rem;
             height: 7.25rem;
         }
     }
@@ -213,6 +235,11 @@
         max-width: 37.125rem;
         margin-top: 0;
         color: #18947F;
+        @media (max-width:1024px){
+            max-width: 30.125rem;
+            font-size: 1.6rem;
+            line-height: 2.3rem;
+        }
         @media (max-width: 768px){
             font-size: 1rem;
             max-width: 20rem;
@@ -272,7 +299,7 @@
                 max-width: 30.813rem;
             }
             @media (max-width: 500px){
-                max-width: 20.318rem;
+                max-width: 14.318rem;
             }
         }
     }
@@ -282,9 +309,6 @@
         max-width: 22.286rem;
         @media (max-width: 1024px){
             justify-content: space-between;
-        }
-        @media (max-width:620px) {
-            gap: 5rem;
         }
         img{
             width: 7.839rem;
@@ -477,6 +501,9 @@
     @media (max-width: 1024px){
         flex-direction: column;
         gap: 2rem;
+    }
+    @media (max-width:1200px){
+        padding: 0 2rem;
     }
     @media (max-width:560px){
         padding: 0 2rem;
@@ -831,6 +858,9 @@
         @media (max-width:768px){
             font-size: 1rem;
         }
+        @media (max-width: 475px){
+            font-size: 0.8rem;
+        }
     }
     img{
         display: block;
@@ -844,28 +874,55 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 7em;
+    padding: 1.5em 3em;
     background: #18947F;
     border-radius: 0.625rem;
+    @media (max-width:768px){
+        padding: 1em 1em;
+    }
     &__one{
         &__1st{
             color: white;
             font-weight: 600;
             font-size: 2.25rem;    
             margin-bottom: 0;    
+            @media (max-width:1024px){
+                font-size: 1.8rem;
+            }
+            @media (max-width:768px){
+                font-size: 1rem;
+            }
+            @media (max-width: 632px){
+                font-size: 0.7rem;
+            }
+            @media (max-width:420px){
+                font-size: 0.475rem;
+            }
         }
         &__2nd{
             margin-top: 0.5rem;
             color: white;
             font-weight: 600;
             font-size: 2.25rem; 
+            @media (max-width:1024px){
+                font-size: 1.8rem;
+            }
+            @media (max-width:768px){
+                font-size: 1rem;
+            }
+            @media (max-width: 632px){
+                font-size: 0.7rem;
+            }
+            @media (max-width:420px){
+                font-size: 0.475rem;
+                margin-top: 0;
+            }
         }
     }
     &__two{
         input{
             width: 33.063rem;
             height: 3.938rem;
-            max-width: 100%;
             color: white;
             background: #6DB0A5;
             border-radius: 0.625rem;
@@ -874,7 +931,23 @@
             outline: none;
             font-size: 0.875rem;
             padding-left: 1rem;
-            
+            @media (max-width: 1024px){
+                width: 24.063rem;
+            }
+            @media (max-width:768px){
+                width: 14.063rem;
+                height: 2.838rem;
+                padding-right: 9.3rem;
+            }
+            @media (max-width: 632px){
+                width: 6.063rem;
+                height: 2.3rem;
+            }
+            @media(max-width: 420px){
+                width: 1.063rem;
+                font-size: 0.6rem;
+                height: 1.6rem;
+            }
         }
         button{
             max-width: 10.563rem;
@@ -887,66 +960,158 @@
             font-size: 0.875rem;
             font-weight: 500;
             margin-left: -10.8rem;
-            margin-right: 2rem;
             padding: 0 1rem;
             border-radius: 0.625rem;
+            @media (max-width:768px){
+                height: 2.113rem;
+                font-size: 0.675rem;
+                margin-left: -9rem;
+                border-radius: 0.625rem;
+            }
+            @media (max-width: 632px){
+                max-width: 7.563rem;
+                height: 1.513rem;
+                font-size: 0.575rem;
+                margin-left: -8rem;
+                border-radius: 0.425rem;
+            }
+            @media (max-width:420px){
+                font-size: 0.375rem;
+                margin-left: -4.6rem;
+                padding: 0.5em 1em 0;
+            }
         }
     }
 }
 
 .footer{
     background: #939393;
-    padding: 2rem 7rem 0;
+    padding: 2rem 7rem 2rem;
     margin-top: 3rem;
+    @media (max-width: 768px){
+        padding: 2em 0em;
+    }
     &__bottom{
         display: flex;
         justify-content: space-between;
         align-items: center;
+        @media (max-width:475px){
+            flex-direction: column;
+        }
         &__image{
             display: flex;
             flex-direction: column;
+            img{
+                width: 8rem;
+                @media (max-width: 600px){
+                    width: 5rem;
+                }
+            }
             &__gee{
-                max-width: 18.5rem;
+                max-width: 23.5rem;
                 font-weight: 400;
                 font-size: 1rem;
                 line-height: 2rem;
-                color: white;
+                color: #E6E6E6;
+                @media (max-width: 1024px){
+                    max-width: 16.5rem;
+                    font-size: 0.6rem;
+                    line-height: 1.5rem;                
+                }
+                @media (max-width: 600px){
+                    max-width: 10.5rem;
+                    font-size: 0.4rem;
+                    line-height: 1rem;
+                }
+                @media (max-width: 475px){
+                    max-width: 15.5rem;
+                }
             }
         }
         &__info{
             display: flex;
             justify-content: space-between;
-            gap: 5rem;
+            gap: 6rem;
+            @media (max-width: 1200px){
+                gap: 2rem;
+            }
+            @media (max-width: 475px){
+                gap: 3rem;
+            }
             &__one{
                 h6{
                     color: white;
+                    @media (max-width: 600px){
+                        font-size: 0.5rem;
+                    }
                 }
                 p{
                     font-weight: 400;
-                    font-size: 16px;
-                    color: white;
+                    font-size: 1rem;
+                    color: #E6E6E6;
+                    @media (max-width: 1024px){
+                        font-size: 0.6rem;
+                    }
+                    @media (max-width: 600px){
+                        font-size: 0.4rem;
+                    }
                 }
             }
             &__two{
                 h6{
                     color: white;
+                    @media (max-width: 600px){
+                        font-size: 0.5rem;
+                    }
                 }
                 p{
                     font-weight: 400;
-                    font-size: 16px;
-                    color: white;
+                    font-size: 1rem;
+                    color: #E6E6E6;
+                    @media (max-width: 1024px){
+                        font-size: 0.6rem;
+                    }
+                    @media (max-width: 600px){
+                        font-size: 0.4rem;
+                    }
                 }
             }
             &__three{
                 h6{
                     color: white;
+                    @media (max-width: 600px){
+                        font-size: 0.5rem;
+                    }
                 }
                 p{
                     font-weight: 400;
-                    font-size: 16px;
-                    color: white;
+                    font-size: 1rem;
+                    color: #E6E6E6;
+                    @media (max-width: 1024px){
+                        font-size: 0.6rem;
+                    }
+                    @media (max-width: 600px){
+                        font-size: 0.4rem;
+                    }
                 }
             }
+        }
+    }
+    &__text{
+        font-weight: 400;
+        font-size: 1rem;
+        color: #E6E6E6;
+        @media (max-width:1024px){
+            font-size: 0.8rem;
+        }
+        @media (max-width: 600px){
+            font-size: 0.6rem;
+        }
+        @media (max-width: 475px){
+            font-size: 0.4rem;
+            margin-left: 2.5rem;
+            margin-top: 1rem;
+
         }
     }
 }
