--- a/src/App.scss
+++ b/src/App.scss
@@ -29,6 +29,7 @@
 .nav{
     display: flex;
     justify-content: space-between;
+    align-items: center;
     padding-left: 7em;
     padding-right: 7em;
     margin-top: 4em;
@@ -43,6 +44,7 @@
     &__logo{
         @media(max-width: 768px){
             max-width: 4.625rem;
+            height: 1.3rem;
         }
     }
     &__options{
@@ -247,11 +249,10 @@
         }
         @media (max-width: 500px){
             font-size: 0.75rem;
-            line-height: 1.25rem;
+            line-height: 1rem;
             max-width: 12.375rem;
-            margin-bottom: 1.25rem;
+            margin-bottom: 0.3rem;
             color: #18947F;
-            height: 3.875rem;
             margin-top: -0.5rem;
         }
     }
@@ -261,7 +262,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 0 7em;
-    margin-top: 4.313em;
+    margin-top: 2em;
     @media (max-width:620px){
         flex-direction: column;
         gap: 1rem;
@@ -299,7 +300,8 @@
                 max-width: 30.813rem;
             }
             @media (max-width: 500px){
-                max-width: 17.318rem;
+                max-width: 21.318rem;
+                text-align: justify;
             }
         }
     }
@@ -326,7 +328,7 @@
     gap: 2rem;
     align-items: baseline;
     justify-content: center;
-    margin-top: 5rem;
+    margin-top: 2rem;
     @media(max-width:768px){
         flex-direction: column;
         align-items: center;
@@ -341,16 +343,12 @@
         &__container{
             width: 6.25rem;
             height: 6.25rem;
-            background: #F4F4F4;
-            border-radius: 50%;
             @media (max-width:768px){
                 width: 3rem;
                 height: 3rem;
             }
         }
         &__type{
-            font-weight: 700;
-            text-align: center;
             font-size: 1.25rem;
             margin: 0;
             @media (max-width:768px){
@@ -381,9 +379,6 @@
         &__container{
             width: 6.25rem;
             height: 6.25rem;
-            text-align: center;
-            border-radius: 50%;
-            background: #F4F4F4;
             @media (max-width:768px){
                 width: 3rem;
                 height: 3rem;
@@ -422,8 +417,6 @@
         &__container{
             width: 6.25rem;
             height: 6.25rem;
-            background: #F4F4F4;
-            border-radius: 50%;
             @media (max-width:768px){
                 width: 3rem;
                 height: 3rem;
@@ -461,9 +454,7 @@
         max-width: 15.75rem;
         &__container{
             width: 6.25rem;
-            border-radius: 50%;
             height: 6.25rem;
-            background: #F4F4F4;
             @media (max-width:768px){
                 width: 3rem;
                 height: 3rem;
@@ -497,7 +488,7 @@
     display: flex;
     justify-content: space-between;
     padding: 0 7em;
-    margin-top: 6.813em;
+    margin-top: 2em;
     @media (max-width: 1024px){
         flex-direction: column;
         gap: 2rem;
@@ -676,7 +667,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 0 7rem;
-    margin-top: 5.375rem;
+    margin-top: 1rem;
     @media (max-width: 830px){
         padding: 0 3rem;
     }
@@ -739,7 +730,7 @@
 .section6{
     background-color: #89D8CA;
     padding: 5.125em 7em 6.063em;
-    margin-top: 3.563em;
+    margin-top: 1em;
     @media (max-width:1024px){
         padding-right: 3rem;
         padding-left: 3rem;
@@ -775,7 +766,7 @@
             }
             @media (max-width:500px){
                 width: 7.125rem;
-                height: 6.125rem;  
+                height: 7.125rem;  
                 img{
                     width: 3.75rem;
                 }     
@@ -987,7 +978,7 @@
 .footer{
     background: #939393;
     padding: 2rem 7rem 2rem;
-    margin-top: 3rem;
+    margin-top: 2rem;
     @media (max-width: 768px){
         padding: 2em 0em;
     }
@@ -1024,7 +1015,7 @@
                     line-height: 1rem;
                 }
                 @media (max-width: 475px){
-                    max-width: 15.5rem;
+                    max-width: 18.5rem;
                 }
             }
         }
@@ -1036,7 +1027,7 @@
                 gap: 2rem;
             }
             @media (max-width: 475px){
-                gap: 3rem;
+                gap: 4.5rem;
             }
             &__one{
                 h6{
@@ -1109,9 +1100,12 @@
         }
         @media (max-width: 475px){
             font-size: 0.4rem;
-            margin-left: 2.5rem;
+            margin-left: 2.7rem;
             margin-top: 1rem;
 
+        }
+        @media (max-width: 320px){
+            margin-left: 1rem;
         }
     }
 }
