--- a/src/App.scss
+++ b/src/App.scss
@@ -30,8 +30,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-left: 7em;
-    padding-right: 7em;
+    padding-left: 4em;
+    padding-right: 4em;
     margin-top: 4em;
     @media (max-width: 768px){
         padding: 0 7rem;
@@ -107,8 +107,8 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0 7rem;
-    margin-top: 7rem;
+    padding: 0 4rem;
+    margin-top: 4rem;
     @media (max-width:1024px){
         padding: 0 4em;
     }
@@ -261,7 +261,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 7em;
+    padding: 0 4em;
     margin-top: 2em;
     @media (max-width:620px){
         flex-direction: column;
@@ -324,10 +324,10 @@
 }
 .section3{
     display: flex;
-    padding: 0 2em;
+    padding: 0 4em;
     gap: 2rem;
     align-items: baseline;
-    justify-content: center;
+    justify-content: space-between;
     margin-top: 2rem;
     @media(max-width:768px){
         flex-direction: column;
@@ -349,7 +349,7 @@
             }
         }
         &__type{
-            font-size: 1.25rem;
+            font-size: 1rem;
             margin: 0;
             @media (max-width:768px){
                 font-size: 0.75rem;
@@ -387,8 +387,7 @@
         &__type{
             font-weight: 700;
             margin: 0;
-            text-align: center;
-            font-size: 1.25rem;
+            font-size: 1rem;
             @media (max-width:768px){
                 font-size: 0.75rem;
             }
@@ -424,9 +423,8 @@
         }
         &__type{
             font-weight: 700;
-            text-align: center;
             margin: 0;
-            font-size: 1.25rem;
+            font-size: 1rem;
             @media (max-width:768px){
                 font-size: 0.75rem;
             }
@@ -462,9 +460,8 @@
         }
         &__type{
             font-weight: 700;
-            font-size: 1.25rem;
+            font-size: 1rem;
             margin: 0;
-            text-align: center;
             @media (max-width:768px){
                 font-size: 0.75rem;
             }
@@ -487,7 +484,7 @@
 .section4{
     display: flex;
     justify-content: space-between;
-    padding: 0 7em;
+    padding: 0 4em;
     margin-top: 2em;
     @media (max-width: 1024px){
         flex-direction: column;
@@ -666,7 +663,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 7rem;
+    padding: 0 4rem;
     margin-top: 1rem;
     @media (max-width: 830px){
         padding: 0 3rem;
@@ -729,7 +726,7 @@
 }
 .section6{
     background-color: #89D8CA;
-    padding: 5.125em 7em 6.063em;
+    padding: 5.125em 4em 6.063em;
     margin-top: 1em;
     @media (max-width:1024px){
         padding-right: 3rem;
@@ -977,7 +974,7 @@
 
 .footer{
     background: #939393;
-    padding: 2rem 7rem 2rem;
+    padding: 2rem 4rem 2rem;
     margin-top: 2rem;
     @media (max-width: 768px){
         padding: 2em 0em;
