--- a/src/App.scss
+++ b/src/App.scss
@@ -984,6 +984,9 @@
     @media (max-width: 768px){
         padding: 2em 3em;
     }
+    @media (max-width: 375px){
+        padding: 2em 2rem;
+    }
     &__bottom{
         display: flex;
         justify-content: space-between;
@@ -1030,7 +1033,7 @@
                 gap: 2rem;
             }
             @media (max-width: 475px){
-                gap: 4.5rem;
+                gap: 4.8rem;
             }
             &__one{
                 h6{
@@ -1109,12 +1112,11 @@
         }
         @media (max-width: 475px){
             font-size: 0.4rem;
-            margin-left: 2.7rem;
+            margin-left: 1rem;
             margin-top: 1rem;
-
         }
         @media (max-width: 320px){
-            margin-left: 1rem;
+            margin-left: 0rem;
         }
     }
 }
