--- a/src/App.scss
+++ b/src/App.scss
@@ -6,8 +6,11 @@
         padding-left: 4em;
         padding-right: 4em;
     @media (max-width: 500px){
-        padding-left: 1em;
-        padding-right: 1em;
+        padding-left: 2em;
+        padding-right: 2em;
+    }
+    @media (max-width: 375px){
+        padding: 0 1em;
     }
         p{
             font-weight: 700;
@@ -39,8 +42,11 @@
         margin-top: 2rem;
     }
     @media (max-width: 500px){
-        padding: 0 1rem;
+        padding: 0 2em;
         margin-top: 1rem;
+    }
+    @media (max-width: 375px){
+        padding: 0 1em;
     }
     &__logo{
         @media(max-width: 768px){
@@ -117,8 +123,11 @@
         padding: 0 4em;
     }
     @media (max-width: 500px){
-        padding: 0 1rem;
-        margin-top: 1rem;
+        padding: 0 2em;
+        margin-top: 1em;
+    }
+    @media (max-width: 375px){
+        padding: 0 1em;
     }
     &__first{
         display: flex;
